Remove calls to Java 11 API